<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 Telechips, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
    
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
		    android:id="@+id/channel_no_view"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="15"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:gravity="left"
			android:text="@string/channel_no"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="15"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/manual_scan_channel_left"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/button_arrow_left"
				android:focusable="false"	/>
			<TextView
			    android:id="@+id/manual_scan_channel_index"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="13"
				android:gravity="center"
				android:focusable="true"
				android:nextFocusDown="@+id/frequency_edit"
				android:textStyle="bold"
				android:textAppearance="?android:attr/textAppearanceLarge"	/>
			<ImageView
				android:id="@+id/manual_scan_channel_right"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/button_arrow_right"
				android:focusable="false"	/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView 
			android:id="@+id/frequency_view"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:text="@string/frequency_khz"
			android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<EditText
			android:id="@id/frequency_edit"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:inputType="numberDecimal"
			android:maxLength="7"
			android:autoText="false"
			android:capitalize="none"
			android:gravity="fill_horizontal"
			android:focusable="false"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView 
			android:id="@+id/bandwidth_view"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:text="@string/bandwidth_mhz"
			android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<RadioGroup
			android:id="@+id/bandwidth_rg"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="horizontal">
			<RadioButton 
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:nextFocusUp="@id/frequency_edit"
				android:text="@string/_6_mhz"
				android:focusable="false"
				android:clickable="false"
				android:id="@+id/six_mhz"/>
			<RadioButton 
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:nextFocusUp="@id/frequency_edit"
				android:text="@string/_7_mhz"
				android:focusable="false"
				android:clickable="false"
				android:id="@+id/seven_mhz"/>
			<RadioButton 
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:nextFocusUp="@id/frequency_edit"
				android:text="@string/_8_mhz"
				android:focusable="false"
				android:clickable="false"
				android:id="@+id/eight_mhz"/>
		</RadioGroup>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="9dp"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/rf_strength_id"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:text="@string/strength"
			android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<TextView
			android:id="@+id/rf_value"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="40dip"
			android:layout_marginRight="20dip"
			android:text="@string/default_dBm"
			android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="14dp"
		android:paddingBottom="10dp"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/quality_id"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:text="@string/quality"
			android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<TextView
			android:id="@+id/quality_value"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="40dip"
			android:layout_marginRight="20dip"
			android:text="@string/default_percentage"
			android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>
</LinearLayout>
