<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 Telechips, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="3px"
    android:paddingLeft="10px" >
    
	<TextView
		android:id="@+id/sat_id"
		android:layout_margin="10px"
		android:layout_width="20px"
		android:layout_height="wrap_content"
		android:textSize="20sp"		
		android:gravity="center"
		android:layout_gravity="center_vertical"
		android:singleLine="true"
		android:layout_weight="4"
		android:text="@string/dish_setup_no"
		android:clickable="true" />

	<TextView
		android:id="@+id/direction"
		android:layout_width="20px"
		android:layout_height="wrap_content"
		android:textSize="20sp"		
		android:paddingLeft="10px"
		android:gravity="center"
		android:layout_gravity="center_vertical"
		android:singleLine="true"
		android:layout_weight="8"
		android:text="@string/dish_setup_direction"
		android:clickable="true" /> 

	<TextView
	  	android:id="@+id/sat_longitude"
	  	android:layout_width="20px"
	  	android:textSize="20sp"
	  	android:layout_height="wrap_content"
	  	android:paddingLeft="10px"
	  	android:gravity="center"
	  	android:layout_gravity="center_vertical"
	  	android:singleLine="true"
	  	android:layout_weight="8"
	  	android:text="@string/dish_setup_angle"
	  	android:clickable="true" />

	<TextView
	  	android:id="@+id/sat_name"
	  	android:layout_width="20px"
	  	android:textSize="20sp"
	  	android:layout_height="wrap_content"
	  	android:gravity="center"
	  	android:layout_gravity="center_vertical"
	  	android:singleLine="true"
	  	android:ellipsize="marquee"  
		android:marqueeRepeatLimit="marquee_forever"
	  	android:layout_weight="20"
	  	android:text="@string/dish_setup_name"
	  	android:clickable="true" />

</LinearLayout>